--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.9.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.6"
   }
 }
